Bug 328761 - [ Save As ] doesn't propose the actual file path , and fall-back to /home/username/
Summary: [ Save As ] doesn't propose the actual file path , and fall-back to /home/use...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: File formats (other bugs)
Version First Reported In: 2.8 Pre-Alpha
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
: 328865 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-12-13 13:40 UTC by David REVOY
Modified: 2013-12-19 13:05 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David REVOY 2013-12-13 13:40:49 UTC
Hi, a little bug in the way 'Save As' works recently :

   * To reproduce :
- Edit a file, ex :  'first-step.kra' file in a folder tree like this /home/deevad/my-project/to-rule/the-world/first-step.kra
- Press "File>Save As" after edition, and enter for the name "first-step_revised.kra" ( without paying more attention )
- Press enter

   * Result :
 - When you'll visit /home/deevad/my-project/to-rule/the-world/ later ; only first-step.kra will be around. 
- 'first-step_revised.kra' will be in your /home/deevad/ folder

   * Wanted result
- On pressing the 'Save as' button , having Krita to auto navigate to my project folder path /home/deevad/my-project/to-rule/the-world/ sounds logic to me ;  rather than auto proposing /home/deevad/
Comment 1 Halla Rempt 2013-12-13 13:55:24 UTC
Hm... Nothing changed there recently. Have you an idea since when this has started?
Comment 2 David REVOY 2013-12-13 14:32:29 UTC
I don't think it's recent. Probably one month old. But as I use 'Save incremental' or 'Save Backup' often, I didn't noticed. Or when I noticed I thought I accidentally pressed the 'home' button on the way. I suppose it appeared when the 'save' dialog changed ; during a period , last month , I saw Krita using the Gnome save/load file manager.  Also, since this time I suppose something else weird happen if you 'Save As"  my_file_name , without extension ( before , without extension was equal to *.kra for Krita ) . Now there is a dialog 'missing import filter' and nothing is saved.  But that's certainly another bug report...
Comment 3 Halla Rempt 2013-12-16 14:21:36 UTC
*** Bug 328865 has been marked as a duplicate of this bug. ***
Comment 4 vanyossi 2013-12-18 18:41:37 UTC
Hey, I can confirm this bug on XFCE, git master ( c1ebb8342c26008f61a59ea7687eb22d6a515e40 )

hitting "save as..." defaults to $HOME

But If I open a file, go to save-as (this opens $HOME), select a new destination ($HOME/new/image/folder). Hit save. Close image (CTRL+W). Open another image. Then Select Save-as: Krita will default to last used dir, in this case ($HOME/new/image/folder)
Comment 5 Dmitry Kazakov 2013-12-19 11:48:48 UTC
I can't reproduce this bug on openSUSE, but it is reproducible on Windows.
Comment 6 Dmitry Kazakov 2013-12-19 12:32:27 UTC
Git commit 2d764ea942847432f4f4fa94019c7d7aeac495bf by Dmitry Kazakov.
Committed on 19/12/2013 at 12:31.
Pushed by dkazakov into branch 'master'.

Fix default saving path

File dialogs of most of the window managers except KDE expect the
default path be a local path, not Url (KDE can handle both variants)

M  +1    -1    libs/main/KoMainWindow.cpp

http://commits.kde.org/calligra/2d764ea942847432f4f4fa94019c7d7aeac495bf
Comment 7 Dmitry Kazakov 2013-12-19 12:36:47 UTC
Git commit 38635bd5e3e12deb90f174fb2e4c8373c446d949 by Dmitry Kazakov.
Committed on 19/12/2013 at 12:31.
Pushed by dkazakov into branch 'calligra/2.8'.

Fix default saving path

File dialogs of most of the window managers except KDE expect the
default path be a local path, not Url (KDE can handle both variants)

M  +1    -1    libs/main/KoMainWindow.cpp

http://commits.kde.org/calligra/38635bd5e3e12deb90f174fb2e4c8373c446d949
Comment 8 David REVOY 2013-12-19 13:05:10 UTC
Test are succesfull ! it 's solved. 
Thx!