Fix default saving path

File dialogs of most of the window managers except KDE expect the
default path be a local path, not Url (KDE can handle both variants)

BUG:328761